...
        ) {
            Text(
                text = "¡Hola, ${currentUser?.nombre ?: "Invitado"}!",
                style = MaterialTheme.typography.headlineMedium
            )
            Text(
                text = "Tus Carreras",
                style = MaterialTheme.typography.titleLarge,
                modifier = Modifier.padding(vertical = 16.dp)
            )

            activeTrailUuid?.let { uuid ->
                Card(
...
